Completed port to Ray v0.8.7

--- a/ray-rllib/explore-rllib/01-Application-Cart-Pole.ipynb
+++ b/ray-rllib/explore-rllib/01-Application-Cart-Pole.ipynb
@@ -315,10 +315,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "!RAY_ADDRESS=auto rllib rollout tmp/ppo/cart/checkpoint_10/checkpoint-10 \\\n",
+    "!rllib rollout tmp/ppo/cart/checkpoint_10/checkpoint-10 \\\n",
     "    --config \"{\\\"env\\\": \\\"CartPole-v1\\\", \\\"model\\\": {\\\"fcnet_hiddens\\\": [100, 50]}}\" \\\n",
     "    --run PPO \\\n",
     "    --no-render \\\n",
@@ -413,7 +415,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
