--- a/ray-rllib/explore-rllib/02-Bipedal-Walker.ipynb
+++ b/ray-rllib/explore-rllib/02-Bipedal-Walker.ipynb
@@ -26,7 +26,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, import Ray and the PPO module in RLlib, then start Ray."
+    "Then, import Ray and the PPO module in RLlib, then start Ray. \n",
+    "\n",
+    "> **NOTE:** There are lots of warnings from TF code for transitioning between V1 and V2. Please ignore them."
    ]
   },
   {
@@ -152,7 +154,7 @@
     "\n",
     "config = ppo.DEFAULT_CONFIG.copy()              # PPO's default configuration. See the next code cell.\n",
     "config[\"log_level\"] = \"WARN\"                    # Suppress too many messages, but try \"INFO\" to see what can be printed.\n",
-    "config['framework'] = \"tf2\"                     # TensorFlow v2\n",
+    "config['framework'] = \"tf\"                      # TensorFlow\n",
     "# Other settings we might adjust:\n",
     "config['num_workers'] = 4                       # Use > 1 for using more CPU cores, including over a cluster\n",
     "config['num_sgd_iter'] = 50                     # Number of SGD (stochastic gradient descent) iterations per training minibatch.\n",
@@ -184,13 +186,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> **Note:** If you get warnings like _WARN: Box bound precision lowered by casting to float32_, you can safely ignore them. They come from the definitions in the Bipedal Walker environment for state and action spaces where 32-bit floats are used instead of 64-bit."
+    "> **Note:** You can safely ignore the following warnings if you see them:\n",
+    "> ```\n",
+    "> WARNING:tensorflow:From .../python3.X/site-packages/tensorflow_core/python/compat/v2_compat.py:88: disable_resource_variables \n",
+    "> (from tensorflow.python.ops.variable_scope) is deprecated and will be removed in a future version...\n",
+    "> ```\n",
+    "> Also, there may be warnings about `box bound precision...`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "agent = ppo.PPOTrainer(config, env=SELECT_ENV)"
@@ -202,13 +211,15 @@
    "source": [
     "Restore from a previously-captured checkpoint, after training for 100 iterations.\n",
     "\n",
-    "> **WARNING:** If you change the configuration parameters above and you get an exception on the next line, it probably means the checkpoint is incompatible with the change. Just train without the checkpoint."
+    "> **WARNING:** If you change the configuration parameters above and you get an exception on the next line, it probably means the checkpoint is incompatible with the change. Just skip loading the checkpoint, but consider training for 100-200 iterations instead of 20."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "agent.restore('bipedal-walker-checkpoint/checkpoint-100')"
@@ -356,7 +367,7 @@
     "\n",
     "Next we'll use the [RLlib rollout CLI](https://ray.readthedocs.io/en/latest/rllib-training.html#evaluating-trained-policies), to evaluate the trained policy.\n",
     "\n",
-    "We'll use the last saved checkpoint you created for the rollout, `checkpoint_100` (or a different number you might have, see the output from the training above), evaluated through `2000` steps.\n",
+    "We'll use the last saved checkpoint you created for the rollout, `checkpoint_120` (or a different number if you changed the number of steps, etc. See the output from the training above), evaluated through `2000` steps.\n",
     "\n",
     "> **Notes:** \n",
     ">\n",
@@ -372,10 +383,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "rllib rollout tmp/ppo/bipedal-walker/checkpoint_100/checkpoint-100 \\\n",
+    "!rllib rollout tmp/ppo/bipedal-walker/checkpoint_120/checkpoint-120 \\\n",
     "    --config \"{\\\"env\\\": \\\"BipedalWalker-v3\\\", \\\"model\\\": {\\\"fcnet_hiddens\\\": [512, 512]}}\" \\\n",
     "    --run PPO \\\n",
     "    --no-render \\\n",
@@ -464,7 +477,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
