--- a/ray-rllib/explore-rllib/03-Custom-Environments-Reward-Shaping.ipynb
+++ b/ray-rllib/explore-rllib/03-Custom-Environments-Reward-Shaping.ipynb
@@ -456,7 +456,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "trainer = do_training(ShapedChainEnvVisited, config=trainer_config, iterations=20)"
@@ -503,6 +505,13 @@
    "source": [
     "ray.shutdown()  # \"Undo ray.init()\"."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -521,7 +530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
