--- a/ray-rllib/explore-rllib/extras/Extra-Application-Frozen-Lake.ipynb
+++ b/ray-rllib/explore-rllib/extras/Extra-Application-Frozen-Lake.ipynb
@@ -95,7 +95,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "results = []\n",
@@ -186,7 +188,7 @@
    },
    "outputs": [],
    "source": [
-    "!RAY_ADDRESS=auto rllib rollout \\\n",
+    "!rllib rollout \\\n",
     "    tmp/ppo/frozen-lake/checkpoint_10/checkpoint-10 \\\n",
     "    --config \"{\\\"env\\\": \\\"FrozenLake-v0\\\"}\" \\\n",
     "    --run PPO \\\n",
@@ -235,7 +237,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
