--- a/ray-rllib/explore-rllib/extras/Extra-Application-Mountain-Car.ipynb
+++ b/ray-rllib/explore-rllib/extras/Extra-Application-Mountain-Car.ipynb
@@ -76,8 +76,7 @@
    "source": [
     "Next we'll train an RLlib policy with the `MountainCar-v0` environment.\n",
     "\n",
-    "By default, training runs for `10` iterations. Increase the `N_ITER` setting if you want to train longer and see the resulting rewards improve.\n",
-    "Also note that *checkpoints* get saved after each iteration into the `tmp/ppo/mountain-car` directory.\n",
+    "By default, training runs for `20` iterations. Increase the `N_ITER` setting _considerably_ if you want to train long enough to see good results. Consider saving high checkpoints and using them in the `agent.restore()` cell below. Note the directory, which is different from the directory used to save the *checkpoints* after each iteration, `tmp/ppo/mountain-car`.\n",
     "\n",
     "For `MountainCar`, the environment has these parameters and behaviors (from this [source code](https://github.com/openai/gym/blob/master/gym/envs/classic_control/mountain_car.py)):\n",
     "\n",
@@ -192,13 +191,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "agent.restore('mountain-car-checkpoint/checkpoint-200')"
+    "agent.restore('mountain-car-checkpoint/checkpoint-20')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "results = []\n",
@@ -276,7 +277,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!RAY_ADDRESS=auto rllib rollout \\\n",
+    "!rllib rollout \\\n",
     "    tmp/ppo/mountain-car/checkpoint_200/checkpoint-200 \\\n",
     "    --config '{\"env\": \"MountainCar-v0\", \"num_workers\":4, \"train_batch_size\":10000, \"sgd_minibatch_size\":256, \"evaluation_num_episodes\":50}' --run PPO \\\n",
     "    --steps 2000"
@@ -324,7 +325,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
