--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -253,7 +253,7 @@
     "| 05 | [Linear Thompson Sampling](ray-rllib/multi-armed-bandits/05-Linear-Thompson-Sampling.ipynb) | Another popular algorithm for exploration vs. exploitation is _Thompson Sampling_. This lesson shows how to use a linear version in RLlib. |\n",
     "| 06 | [Market Example](ray-rllib/multi-armed-bandits/06-Market-Example.ipynb) | A simplified real-world example of MABs, finding the optimal stock and bond investment strategy. |\n",
     "\n",
-    "Exercise solutions for this segment of the tutorial can be found [here](ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb)."
+    "Exercise solutions for this bandits segment of the tutorial can be found [here](ray-rllib/multi-armed-bandits/solutions/Multi-Armed-Bandits-Solutions.ipynb)."
    ]
   },
   {
@@ -279,7 +279,23 @@
     "| [Extra: Application - Taxi](ray-rllib/explore-rllib/extras/Extra-Application-Taxi.ipynb) | Based on the `Taxi-v3` environment from OpenAI Gym. |\n",
     "| [Extra: Application - Frozen Lake](ray-rllib/explore-rllib/extras/Extra-Application-Frozen-Lake.ipynb) | Based on the `FrozenLake-v0` environment from OpenAI Gym. |\n",
     "\n",
-    "In addition, exercise solutions for this tutorial can be found [here](ray-rllib/explore-rllib/solutions/Ray-RLlib-Solutions.ipynb)."
+    "In addition, exercise solutions for this \"exploration\" section of the tutorial can be found [here](ray-rllib/explore-rllib/solutions/Ray-RLlib-Solutions.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RecSys: Recommender System\n",
+    "\n",
+    "This section applies RL to the problem of building a recommender system, a state-of-the-art technique that addresses many of the limitations of older approaches.\n",
+    "\n",
+    "|    | Lesson | Description |\n",
+    "| :- | :----- | :---------- |\n",
+    "| 00 | [RecSys: Recommender System Overview](ray-rllib/recsys/00-RecSys-Overview.ipynb) | Overview of this set of lessons. |\n",
+    "| 01 | [Recsys: Recommender System](ray-rllib/recsys/01-Recsys.ipynb) | An example that builds a recommender system using reinforcement learning. |\n",
+    "\n",
+    "The [Custom Environments and Reward Shaping](ray-rllib/explore-rllib/03-Custom-Environments-Reward-Shaping.ipynb) lesson from _Explore RLlib_ might be useful background for this section."
    ]
   },
   {
@@ -389,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
