caught a typo, adding requirements for CLI script

--- a/ray-rllib/recsys/01-Recsys.ipynb
+++ b/ray-rllib/recsys/01-Recsys.ipynb
@@ -333,7 +333,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## A Thesis for Building an RL Recommender System\n",
+    "## Thesis for Building an RL Recommender System\n",
     "\n",
     "We're using a thesis here that people tend to like similar \"kinds\" of items, in this case jokes. While we could go to extra effort to build a classifier model for jokes, it's much simpler to measure ratings for them across a large sample of users' likes. In a classic [*collaborative filtering*](https://en.wikipedia.org/wiki/Collaborative_filtering) approach, we could base our recommendations on other users who have similar patterns of rating items. \n",
     "\n",
@@ -801,7 +801,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Register our environment so we can reference it by name. Then craete a `PPOTrainer`."
+    "Register our environment so we can reference it by name. Then create a `PPOTrainer`."
    ]
   },
   {
