Refinements for Recsys and references

--- a/ray-rllib/References-Reinforcement-Learning.ipynb
+++ b/ray-rllib/References-Reinforcement-Learning.ipynb
@@ -36,6 +36,7 @@
     "\n",
     "Several blog posts and series provide concise introductions to RL:\n",
     "\n",
+    "* [Anatomy of a custom environment for RLlib](https://medium.com/distributed-computing-with-ray/anatomy-of-a-custom-environment-for-rllib-327157f269e5).\n",
     "* [A Reinforcement Learning Cheat Sheet](https://towardsdatascience.com/reinforcement-learning-cheat-sheet-2f9453df7651).\n",
     "* [Reinforcement Learning Explained](https://www.oreilly.com/radar/reinforcement-learning-explained/), Junling Hu, 2016. A gentle introduction to the ideas of RL.\n",
     "* [A Beginner's Guide to Deep Reinforcement Learning](https://pathmind.com/wiki/deep-reinforcement-learning), Pathmind, 2019. From Pathmind, which uses RLlib for its products and services. Lots of good references at the end of this post.\n",
@@ -89,6 +90,16 @@
     "* Hado van Hasselt, Arthur Guez, and David Silver, \"Deep Reinforcement Learning with Double Q-learning\", December 2015, [arxiv](https://arxiv.org/abs/1509.06461).\n",
     "* Tom Schaul, John Quan, Ioannis Antonoglou, and David Silver, \"Prioritized Experience Replay\", November 2015, [arxiv](https://arxiv.org/abs/1511.05952).\n",
     "* Ziyu Wang, Tom Schaul, Matteo Hessel, et al., \"Dueling Network Architectures for Deep Reinforcement Learning\", November 2015, [arxiv](https://arxiv.org/abs/1511.06581)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Recommender Systems Using RL\n",
+    "\n",
+    "* Ken Goldberg, Theresa Roeder, Dhruv Gupta, Chris Perkins, \"Eigentaste: A Constant Time Collaborative Filtering Algorithm\", *Information Retrieval*, 4(2), 133-151 (July 2001) [pdf](https://goldberg.berkeley.edu/pubs/eigentaste.pdf).\n",
+    "* Julian McAuley and Jure Leskovec, \"From Amateurs to Connoisseurs: Modeling the Evolution of User Expertise through Online Reviews\", [arxiv](https://arxiv.org/abs/1303.4402) (March 18, 2013).\n"
    ]
   },
   {
@@ -150,7 +161,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
