--- a/ray-rllib/explore-rllib/03-Custom-Environments-Reward-Shaping.ipynb
+++ b/ray-rllib/explore-rllib/03-Custom-Environments-Reward-Shaping.ipynb
@@ -15,7 +15,9 @@
     "We cover two important concepts: \n",
     "\n",
     "1. How to create your own _Markov Decision Process_ abstraction.\n",
-    "2. How to shape the reward of your environment so make your agent more effective. "
+    "2. How to shape the reward of your environment so make your agent more effective. \n",
+    "\n",
+    "For a more detailed discussion of how to build a custom environment for training a policy with RLlib using OpenAI [Gym](https://gym.openai.com/), see the [Recsys](../recsys/00-Recsys-Overview.ipynb) (recommender system) lessons and the blog post [\"Anatomy of a custom environment for RLlib\"](https://medium.com/distributed-computing-with-ray/anatomy-of-a-custom-environment-for-rllib-327157f269e5). Full source code for that post is available at <https://github.com/DerwenAI/gym_example>. "
    ]
   },
   {
