Added note about a third-party example using Cluster Launcher

--- a/ray-cluster-launcher/00-Ray-Cluster-Launcher-Overview.ipynb
+++ b/ray-cluster-launcher/00-Ray-Cluster-Launcher-Overview.ipynb
@@ -18,7 +18,9 @@
     "\n",
     "## About This Tutorial\n",
     "\n",
-    "> **Note:** This tutorial will be released soon. To see the evolving, pre-release details for Cluster Launcher, see [this documentation](https://docs.ray.io/en/master/cluster/launcher.html).\n",
+    "> **Note:** This tutorial will be released soon. To see the details for Cluster Launcher, for Ray v0.8.7 and later, see [this documentation](https://docs.ray.io/en/master/cluster/launcher.html).\n",
+    ">\n",
+    "> In the meantime, [check out this excellent example using AWS](https://github.com/ArdenMa-Intel/ray-aws-example) (free tier). Note that its `requirements.txt` specifies Ray v0.8.6, but it may work with later versions.\n",
     "\n",
     "This tutorial, part of [Anyscale Academy](https://anyscale.com/academy), introduces [Ray Cluster Launcher](https://docs.ray.io/en/latest/), the tool for configuring, launching, and managing Ray clusters, including autoscaling capabilities.\n",
     "\n",
@@ -78,7 +80,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
